# petstory

./: ANALISE_UX_CONVERSAO.md  CNAME  MERCADOPAGO.md  docs.md  pyproject.toml
app/: main.py  worker.py
app/core/: config.py
app/services/: email_service.py  gemini_service.py  payment_service.py  payment_storage.py  pdf_service.py  web_generator.py
app/services/templates/: homenagem_template.html
app/utils/: slug.py
docs/: criar.html  index.html  styles.css
tests/: README.md  __init__.py  conftest.py  test_gemini_service.py  test_pdf_service.py  test_web_generator.py
