[project]
name = "petstory"
version = "0.1.0"
description = "SaaS backend para transformar fotos de pets em desenhos de colorir usando IA"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "google-generativeai>=0.8.0",
    "fpdf2>=2.7.0",
    "pydantic-settings>=2.6.0",
    "resend>=2.4.0",
    "python-dotenv>=1.0.1",
    "pillow>=11.0.0",
    "requests>=2.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

